# flightlogger

./: .gitignore  CMakeLists.txt  Common.h  ConsoleLogger.h  FL2.cpp  FL2.h  GPS.cpp  GpsSerialPort.cpp  Gyro.cpp  IPort.h  LCD.cpp  LCD.h  PanelLogger.cpp  SerialPort.h  Utils.h  makefile  makefile.local
lib/: ArduinoCore-avr
lib/Adafruit_BMP085/: Adafruit_BMP085.h  CMakeLists.txt
lib/Adafruit_GPS/: CMakeLists.txt
lib/Adafruit_L3GD20U/: CMakeLists.txt
lib/ArduinoCore-avr/: CMakeLists.txt
src/: Altimeter.cpp  Altimeter.h  Common.h  ConsoleLogger.cpp  ConsoleSerialPort.cpp  ConsoleSerialPort.h  FL2.cpp  FL2.h  GPS.h  GpsSerialPort.h  Gyro.h  IPort.h  LCD.cpp  LCD.h  Logger.cpp  Logger.h  PanelLogger.h  README.md  SerialPort.cpp  Utils.cpp  Utils.h  makefile
